--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: slack CI
 on:
   workflow_dispatch:
   schedule:
-  - cron: "0 2 * * 1" # 세계 표준시 기준으로 02시는 한국시간 오전 11시
+  - cron: "0 10 * * *" # 세계 표준시 기준으로 1시는 한국시간 오전 10시
   
 jobs:
   post_announcement_message:
